--- a/web-audio/simple-demo/test.html
+++ b/web-audio/simple-demo/test.html
@@ -1,60 +1,24 @@
 <!DOCTYPE html>
-<!--
-Copyright 2012 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-     http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-
-Author: Eric Bidelman (ericbidelman@chromium.org)
--->
 <html>
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<title>Web Audio API createMediaSourceElement() Example</title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<title>Web Audio API simple demo</title>
+
 <style>
 html, body {
+  height: 100%;
   overflow: hidden;
   margin: 0;
   padding: 0;
+  font-family: monospace, courier;
 }
-body > section {
-  display: -webkit-flex;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
-  -webkit-align-content: center;
-  -webkit-align-items: center;
-  box-sizing: border-box;
-  height: 100%;
-  -webkit-perspective: 800;
-  -webkit-transform-style: preserve-3d;
-}
+
 section > * {
   display: -webkit-flex;
   -webkit-align-items: center;
 }
-.fft {
-  position: absolute;
-  -webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.2));
-}
-#fft {
-  -webkit-transform: translateX(-350px) rotateX(-30deg) rotateY(30deg);
-  display:hidden;
-}
-#fft2 {
-  -webkit-transform: translateX(-530px) rotateX(-30deg) rotateY(-30deg);
-  display:hidden;
-}
+
 aside {
   position: absolute;
   left: 1em;
@@ -65,41 +29,28 @@ label {
   cursor: pointer;
 }
 #myaudio {
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: all 0.3s ease-in-out;
 }
 #myaudio.show {
   opacity: 1;
 }
-#playbutton {
-  cursor: pointer;
-}
-#playbutton.playing {
-  opacity: 0.6;
-}
-/*
-#playbutton.playing:hover {
-  opacity: 1;
-}*/
 
-/*section > div:hover + #myaudio {
-  opacity: 1;
-}*/
 #current-time {
   font-size: 100px;
   position: absolute;
   z-index: -1;
   right: 1em;
-  top: 0.25em;
+  top: 0.0em;
   color: rgba(255,0,0,1);
   font-weight: 400;
   z-index:40;
 }
 #bottom-bar{
-  position: fixed;
+  position: relative;
+  margin:auto;
   bottom: 0;
-  width:100%;
-  //height: 80%;
+
   background: rgba(255,0,0,1);
   z-index:0;
 }
@@ -108,149 +59,22 @@ label {
 <body>
 
 <aside>
-  <p style="display:none;">
-    <input type="checkbox" id="toggle-audio" onclick="document.querySelector('#myaudio').classList.toggle('show');"> <label for="toggle-audio">Show &lt;audio&gt; element</label>
-  </p>
   <div id="myaudio"></div>
 </aside>
 
 <section>
-  <div style="position:fixed; top:20px; left:20px; z-index:40"><canvas id="playbutton" width="125" height="125"></canvas></div>
-  <div style="display:none;">
-
-    <canvas id="fft" class="fft" width="512" height="200"></canvas>
-    <canvas id="fft2" class="fft" width="512" height="200"></canvas>
-
-  </div>
-  
   <div id="bottom-bar"></div>
-  <h2 id="current-time"></h2>
+  <div id="current-time"></div>
 </section>
 <script>
-(function() {
-
-CanvasRenderingContext2D.prototype.line = function(x1, y1, x2, y2) {
-  this.lineCap = 'round';
-  this.beginPath();
-  this.moveTo(x1, y1);
-  this.lineTo(x2, y2);
-  this.closePath();
-  this.stroke();
-}
-CanvasRenderingContext2D.prototype.circle = function(x, y, r, fill_opt) {
-  this.beginPath();
-  this.arc(x, y, r, 0, Math.PI * 2, true);
-  this.closePath();
-  if (fill_opt) {
-    this.fillStyle = 'rgba(0,0,0,1)';
-    this.fill();
-    this.stroke();
-  } else {
-    this.stroke();
-  }
-}
-CanvasRenderingContext2D.prototype.rectangle = function(x, y, w, h, fill_opt) {
-  this.beginPath();
-  this.rect(x, y, w, h);
-  this.closePath();
-  if (fill_opt) {
-    this.fillStyle = 'rgba(0,0,0,1)';
-    this.fill();
-  } else {
-    this.stroke();
-  }
-}
-CanvasRenderingContext2D.prototype.triangle = function(p1, p2, p3, fill_opt) {
-  // Stroked triangle.
-  this.beginPath();
-  this.moveTo(p1.x, p1.y);
-  this.lineTo(p2.x, p2.y);
-  this.lineTo(p3.x, p3.y);
-  this.closePath();
-  if (fill_opt) {
-    this.fillStyle = 'rgba(0,0,0,1)';
-    this.fill();
-  } else {
-    this.stroke();
-  }
-}
-CanvasRenderingContext2D.prototype.clear = function() {
-  this.clearRect(0, 0, this.canvas.clientWidth, this.canvas.clientHeight);
-}
-
-var canvas = document.getElementById('playbutton');
-var ctx = canvas.getContext('2d');
-ctx.lineWidth = 4;
-
-var R = canvas.width / 2;
-var STROKE_AND_FILL = false;
-
-canvas.addEventListener('mouseover', function(e) {
-  if (this.classList.contains('playing')) {
-    drawPauseButton(STROKE_AND_FILL);
-  } else {
-    drawPlayButton(STROKE_AND_FILL);
-  }
-  ctx.save();
-  ctx.lineWidth += 3;
-  ctx.circle(R, R, R - ctx.lineWidth + 1);
-  ctx.restore();
-}, true);
-
-canvas.addEventListener('mouseout', function(e) {
-  if (this.classList.contains('playing')) {
-    drawPauseButton(STROKE_AND_FILL);
-  } else {
-    drawPlayButton(STROKE_AND_FILL);
-  }
-}, true);
-
-canvas.addEventListener('click', function(e) {
-  this.classList.toggle('playing');
-  if (this.classList.contains('playing')) {
-    drawPauseButton(STROKE_AND_FILL);
-    audio.play();
-  } else {
-    drawPlayButton(STROKE_AND_FILL);
-    audio.pause();
-  }
-}, true);
-
-function drawPlayButton(opt_fill) {
-  ctx.clear();
-  ctx.circle(R, R, R - ctx.lineWidth + 1, opt_fill);
-  ctx.triangle({x: R*0.8, y: R*0.56}, {x: R*1.45, y: R}, {x: R*0.8, y: R*1.45}, true);
-}
-
-function drawPauseButton(opt_fill) {
-  ctx.clear();
-  ctx.circle(R, R, R - ctx.lineWidth + 1, opt_fill);
-  ctx.save();
-  ctx.lineWidth += 4;
-  ctx.line(R*0.8, R/2, R*0.8, R*1.5);
-  ctx.line(R+(R/5), R/2, R+(R/5), R*1.5);
-  ctx.restore();
-}
-drawPlayButton(STROKE_AND_FILL);
-
-window.playButton = canvas;
-})();
 
 (function() {
-var canvas = document.getElementById('fft');
-var ctx = canvas.getContext('2d');
 
-canvas.width = document.body.clientWidth / 1.4;
-
-var canvas2 = document.getElementById('fft2');
-var ctx2 = canvas2.getContext('2d');
-canvas2.width = canvas.width;
 
 var bar = document.getElementById('bottom-bar');
 var timer = document.getElementById('current-time');
 
-const CANVAS_HEIGHT = canvas.height;
-const CANVAS_WIDTH = canvas.width;
+
 
 window.audio = new Audio();
 audio.src = 'test.ogg';
@@ -278,45 +102,35 @@ var context = new AudioContext();
 var analyser = context.createAnalyser();
 
 function rafCallback(time) {
-  window.requestAnimationFrame(rafCallback, canvas);
+  window.requestAnimationFrame(rafCallback, bar);
 
   var freqByteData = new Uint8Array(analyser.frequencyBinCount);
   analyser.getByteFrequencyData(freqByteData); //analyser.getByteTimeDomainData(freqByteData);
-
+  
   var SPACER_WIDTH = 10;
   var BAR_WIDTH = 5;
-  var OFFSET = 100;
+  var OFFSET = 50;
   var CUTOFF = 23;
-  var numBars = Math.round(CANVAS_WIDTH / SPACER_WIDTH);
 
-  ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-  ctx.fillStyle = 'dodgerblue';
-  ctx.lineCap = 'round';
 
-  ctx2.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-  ctx2.fillStyle = 'deeppink';
-  ctx2.lineCap = 'round';
+    var magnitude = freqByteData[OFFSET];
 
-  // Draw rectangle for each frequency bin.
-  /*for (var i = 0; i < numBars / 2 - CUTOFF; ++i) {
-    var magnitude = freqByteData[i + OFFSET];
-    ctx.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
-  }
-  for (var i = numBars / 2 + CUTOFF; i < numBars; ++i) {
-    var magnitude = freqByteData[i + OFFSET];
-    ctx2.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
-  }*/
-  for (var i = 0; i < numBars; ++i) {
-    var magnitude = freqByteData[i + OFFSET];
-    ctx.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
-    ctx2.fillRect(i * SPACER_WIDTH, CANVAS_HEIGHT, BAR_WIDTH, -magnitude);
+    
+
     //console.log(magnitude);
-    bar.style.background = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (magnitude) % 255 + ", 1)";
-    bar.style.height = 400 + (4 * magnitude) % 255 + "px";
-    timer.style.color = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (magnitude) % 255 + ", 1)";
-  }
+    bar.style.background = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (3 * magnitude) % 255 + ", 1)";
+    bar.style.height = (4 * magnitude) + "px";
+    bar.style.width = (4 * magnitude) + "px";
+    bar.style.top = ((window.innerHeight / 2) - (parseInt(bar.style.height.split("p")[0]) / 2 )) + "px";
+    bar.style.transform = "rotate(45" + (magnitude / 2) +"deg)";
+
+
+
+    timer.style.color = "rgba(" + (2 * magnitude) % 255 + ", " + (magnitude) % 255 + ", " + (3 * magnitude) % 255 + ", 1)";
+
   //bar.style.background = "rgba(" + 0 + ", " + 255 + ", " + 0 + ", 1)";
-  //console.log(bar.style.background);
+  console.log(bar.style.background);
+  console.log(parseInt(bar.style.height.split("p")[0]));
 }
 
 function onLoad(e) {
